style.css
:root {
  --blue: #0065fc;
  --light-blue: #deebff;
  --gray: #f2f2f2;
  --white: #ffffff;
  --black: #000000;
}

.fas::before {
  padding-left: 1px;
}

html {
  scroll-behavior: smooth;
}

body {
  margin: 0;
  font-family: Raleway;
}

#logoSearchBar {
  width: 20px;
  height: 20px;
}

h1 {
  font-size: 18px;
  font-weight: bold;
  display: flex;
  align-items: center;
  justify-content: space-between;
  margin:unset;
}
h2 {
  display: flex;
  font-size: 14px;
  top: 90px;
  font-size: 11px;
  margin: unset;
}

h3{
  font-size: 18px;
  margin:0;
}

a {
  display: flex;
  font-size: 14px;
  cursor: pointer;
}

#logo{
  justify-content: flex-start;
}

nav {
  padding: 0 20px;
  display: grid;
  grid-template-columns: 1fr 1fr 0.3fr 0.3fr 0.3fr;
  grid-template-rows: 1fr;
}

nav > a:nth-of-type(1) {
  grid-column: 4;
}

nav > a:nth-of-type(2){
  grid-column: 5;

}

nav> a:nth-of-type(3){
  grid-column: 6;

}

form {
  display: flex;
}
.searchBar {
  all: unset;
  height: 42px;
  width: 180px;
  border-radius: 0;
  border-color: var(--gray);
  border-style: solid;
  padding-left: 20px;
}
.imgSearchBar {
  display: flex;
  justify-content: center;
  align-items: center;
  height: 48px;
  width: 45px;
  border-radius: 15px 0px 0px 15px;
  background: var(--gray);
  min-width: 45px;
}
.Rechercher {
  height: 47px;
  min-width: 47px;
  width: 100px;
  margin-right: 70px;
  background: var(--blue);
  border-style: none;
  color: var(--white);
  cursor: pointer;
  border-radius: 0px 15px 15px 0px;
  font-weight: bold;
}

.Rechercher > i {
  color: var(--white);
  display: none;
}

.filtres {
  display: inline-flex;
  flex-wrap: wrap;
  font-weight: bold;
  gap: 20px;
}

.title-filter{
  margin-right: 20px;
  margin-bottom: 10px;
  display: inline-block;
}

.minibox {
  display: flex;
  position: relative;
  justify-content: flex-start;
  padding-right: 10px;
  align-items: center;
  height: 35px;
  border: 2px solid var(--gray);
  border-radius: 40px;
  cursor: pointer;
  padding-left: 48px;
}
.iconFiltres {
  display: flex;
  position: absolute;
  left: -2px;
  width: 38px;
  height: 38px;
  border-radius: 50%;
  background-color: var(--light-blue);
  justify-content: center;
  align-items: center;
  margin-right: 10px;
}
.fas {
  color: var(--blue);
}

.box {
  all: unset;
  height: 80px;
  padding: 0 25px;
  display: flex;
  align-items: center;
  cursor: pointer;
  color: var(--black);
  justify-content: center;
}

.box:hover {
  color: var(--blue);
}

.minibox:hover {
  color: var(--blue);
}
.box:hover {
  border-top: 2px solid var(--blue);
}

.infoSearch {
  display: flex;
  align-items: center;
}
.infoLogement {
  padding-left: 10px;
}
.icon {
  display: flex;
  border-radius: 50%;
  width: 21px;
  height: 1px;
  padding: 10px 0px;
  border-color: var(--gray);
  align-items: center;
  justify-content: center;
  border-style: solid;
}

.fa-info {
  color: var(--blue);
  font-size: 10px;
  justify-content: center;
  align-items: center;
}

::placeholder {
  color: var(--black);
  font-weight: bold;
  font-size: 15px;
}
.card {
  display: flex;
  flex-direction: column;
  gap: 20px;
  text-align: left;
  border-radius: 20px;
  background-color: var(--gray);
  padding: 30px;
  min-width: 248px;
}

.AfficherPlus{
  cursor: pointer;
  border: none;
  font-weight: bold;
}

.AfficherPlus:hover{
  color: var(--blue);
}

.parent {
  display: grid;
  grid-template-columns: repeat(auto-fit, minmax(250px, 1fr) );
  gap: 20px;
}
.small-card {
  display: flex;
  justify-content: center;
  flex-direction: column;
  height: 180px;

  background: var(--white);
  border-radius: 20px;
  border: 4px solid white;
  overflow: hidden;
  cursor: pointer;
}
.imgcard{
  display: flex;
  justify-content: flex-start;
  flex-direction: column;
  flex-wrap: wrap;
  font-size: 14px;
  font-weight: bold;
}

.imgsmall-card {
  width: 100%;
  height: 60%;
  object-fit: cover;
}

.card-content {
  width: 100%;
  height: 40%;
  padding: 10px;
}

.long-card-content{
  display: flex;
  flex-direction: column;
  justify-content: flex-start;
  row-gap: 10px;
  padding-left: 7px;
}

.card-title {
  font-weight: bold;
  font-size: 14px;
}

.card-subtitle{
  font-size:12px;
  padding: 4px 0 0 0px;
  display: flex;
}

.money-subtitle{
  font-weight: bold;
  padding-left: 3px
}

.star-long-card{
  font-size: 12px;
  padding: 20px 0 0 0;
  bottom: 0;
}

.star-card{
 font-size: 12px;
 padding: 4px 0 0 0;
}

.card-footer {
  position: absolute;
  bottom: 0;
  display: flex;
  justify-content: flex-start;
  align-items: center;
  height: 30px;
  width: 100%;
  padding: 10px;
  background-color: var(--white);
  font-weight: bold;
}

.parentLong-card{
  display: flex;
  flex-wrap: wrap;
  flex-direction: column;
  gap: 40px;
}
.long-card {
  display: flex;
  height: 120px;
  background: var(--white);
  border-radius: 20px;
  font-size: 14px;
  overflow: hidden;
  border: 4px solid white;
  cursor: pointer;
}

.parentImgLong {
  display: flex;
}

.imgLong-card{
  width: 110px;
  object-fit: cover;
}

.flex {
  display: flex;
  gap: 30px;
}

main {
  display: flex;
  flex-direction: column;
  row-gap: 20px;
  padding: 15px 30px 50px 30px;
}
.Activites {
  padding: 30px 15px 15px 15px;
}
.parentActivites {
  height: 400px;
  display: grid;
  grid-template-columns: 1fr 1fr 1fr 1fr;
  gap: 40px;
  grid-template-areas:
    "VieuxPort FortdePomegue ParcNationaldesCalanques Notre-Dame-de-la-Grade"
    "VieuxPort IlesduFrioul ParcNationaldesCalanques ParcLongchamp";
}
.parentActivites > * {
  position: relative;
  width: 100%;
  height: 100%;
  border-radius: 20px;
  background-color: var(--white);
  box-shadow: rgba(0, 0, 0, 0.2) 0px 18px 50px -10px;
  overflow: hidden;
}

.VieuxPort {
  grid-area: VieuxPort;
}
.FortdePomegue {
  grid-area: FortdePomegue;
}
.IlesduFrioul {
  grid-area: IlesduFrioul;
}
.ParcNationaldesCalanques {
  grid-area: ParcNationaldesCalanques;
}
.Notre-Dame-de-la-Grade {
  grid-area: Notre-Dame-de-la-Grade;
}
.ParcLongchamp {
  grid-area: ParcLongchamp;
}
.parentImgActivite {
  display: flex;
}
.imgActivites {
  object-fit: cover;
  width: 100%;
  height: 100%;
}

footer {
  font-size: 12px;
  background-color: var(--gray);
  padding: 30px;
  gap: 215px;
  flex-direction: row;
  justify-content: flex-start;
}

footer .col {
  display: flex;
  flex-direction: column;
  row-gap: 10px;
}

footer h1 {
  margin-bottom: 10px;
}

.wrapper{
  display: flex;
  width: 70%;
  justify-content: space-between;
  gap: 10px;
}


/* breakpoint for mobile devices */
@media screen and (max-width: 700px) {
  nav {
    grid-template-columns: 1fr 1fr;
    grid-template-rows: 1fr 1fr;
    grid-template-areas:
      "logo signup"
      "nav nav";
  }

  nav > * {
    grid-column: unset !important;
  }

  #logo {
    grid-area: logo;
    justify-content: flex-start;
  }
  #signup {
    grid-area: signup;
    justify-content: flex-end;
  }

  nav { grid-area: nav; }

  .Rechercher {
    border-radius: 15px;
    transform: translateX(-15px);
  }

  .Rechercher > :first-child { display: none; }
  .Rechercher > :last-child { display: block; }

  .box {
    justify-content: center;
  }

  .box:focus {
    border-top: unset;
    border-bottom: 2px solid var(--blue);
  }

  .card:first-child {
    background-color: var(--white);
    width: 100% !important;
    padding: 0;
  }

  .card:last-child {
    transform: translateX(-30px);
    width: 100% !important;
    border-radius: 0;
  }

  .small-card {
    box-shadow: rgba(0, 0, 0, 0.2) 0px 18px 50px -10px;
  }

  .flex {
    flex-direction: column-reverse;
  }

  .title-filter{
    min-width: 40px;
  }

  .parentActivites {
    grid-template-columns: 1fr;
    grid-template-areas: unset;
    grid-template-rows: unset;
    height: 100%;
  }

  .parentActivites > * {
    grid-area: unset;
    max-height: 200px;
  }

  footer > .wrapper {
    flex-direction: column;
    gap: 30px;
  }
}


/* breakpoint for ipad devices */
@media screen and (min-width: 500px) and (max-width: 810px){
}

